crates/test-ui/ui/define_class_invalid_type2.stderr
error[E0277]: the trait bound `Allocated<CustomObject>: MessageReceiver` is not satisfied
 --> ui/define_class_invalid_type2.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ the trait `MessageReceiver` is not implemented for `Allocated<CustomObject>`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: required for `objc2::__macros::MethodFamily<3>` to implement `objc2::__macros::RetainSemantics<Allocated<CustomObject>, Retained<NSObject>, objc2::__macros::KindDefined>`
  = note: required for `fn(Allocated<CustomObject>) -> Retained<NSObject>` to implement `objc2::__macros::define_class::thunk::FnToExternFn<__FnMarker, objc2::__macros::MethodFamily<3>, objc2::__macros::MethodKind, CustomObject>`
note: required by a bound in `objc2::__macros::ConvertDefinedFn::Func`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/thunk.rs
  |
  |     type Func: FnToExternFn<FnMarker, MethodFamily, Kind, Self>;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertDefinedFn::Func`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: Encode` is not satisfied
 --> ui/define_class_invalid_type2.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `Retained<NSObject>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<3>>`
  = note: required for `objc2::__macros::MethodFamily<3>` to implement `objc2::__macros::RetainSemantics<Allocated<CustomObject>, Retained<NSObject>, objc2::__macros::KindDefined>`
  = note: required for `fn(Allocated<CustomObject>) -> Retained<NSObject>` to implement `objc2::__macros::define_class::thunk::FnToExternFn<__FnMarker, objc2::__macros::MethodFamily<3>, objc2::__macros::MethodKind, CustomObject>`
note: required by a bound in `objc2::__macros::ConvertDefinedFn::Func`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/thunk.rs
  |
  |     type Func: FnToExternFn<FnMarker, MethodFamily, Kind, Self>;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertDefinedFn::Func`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Allocated<CustomObject>: MessageReceiver` is not satisfied
 --> ui/define_class_invalid_type2.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ the trait `MessageReceiver` is not implemented for `Allocated<CustomObject>`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: required for `objc2::__macros::MethodFamily<3>` to implement `objc2::__macros::RetainSemantics<Allocated<CustomObject>, Retained<NSObject>, objc2::__macros::KindDefined>`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: EncodeReturn` is not satisfied
 --> ui/define_class_invalid_type2.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `Retained<NSObject>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<3>>`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)
